ingress/api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: spring-petclinic
spec:
  ingressClassName: "azure-application-gateway"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
