ingress/vets-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vets-service-ingress
  namespace: spring-petclinic
spec:
  ingressClassName: "azure-application-gateway"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/vet/"
        backend:
          service:
            name: vets-service
            port:
              number: 8083
