ingress/visits-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  name: visits-service-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/visit(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: visits-service
            port:
              number: 8082
